[Editorial] Correct mismatched diacritics"

--- a/src/epub/text/ukridges-accident-syndicate.xhtml
+++ b/src/epub/text/ukridges-accident-syndicate.xhtml
@@ -189,7 +189,7 @@
 			<p>“No,” I replied, with equal gloom. “May as well go.”</p>
 			<p>“Glad to have seen you,” said Teddy Weeks, “and thanks for the fruit.”</p>
 			<p>The next time I saw the man he was coming out of a manager’s office in the Haymarket. He had on a new Homburg hat of a delicate pearl grey, spats to match, and a new blue flannel suit, beautifully cut, with an invisible red twill. He was looking jubilant, and; as I passed him, he drew from his pocket a gold cigarette-case.</p>
-			<p>It was shortly after that, if you remember, that he made a big hit as the juvenile lead in that piece at the Apollo and started on his sensational career as a matinee idol.</p>
+			<p>It was shortly after that, if you remember, that he made a big hit as the juvenile lead in that piece at the Apollo and started on his sensational career as a matinée idol.</p>
 			<p>Inside the church the organ had swelled into the familiar music of the Wedding March. A verger came out and opened the doors. The five cooks ceased their reminiscences of other and smarter weddings at which they had participated. The cameramen unshipped their cameras. The costermonger moved his barrow of vegetables a pace forward. A dishevelled and unshaven man at my side uttered a disapproving growl.</p>
 			<p>“Idle rich!” said the dishevelled man.</p>
 			<p>Out of the church came a beauteous being, leading attached to his arm another being, somewhat less beauteous.</p>
