--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -58,6 +58,9 @@
 						<li>
 							<a href="text/the-level-business-head.xhtml">The Level Business Head</a>
 						</li>
+						<li>
+							<a href="text/uckridge-and-the-old-stepper.xhtml">Ukridge and the Old Stepper</a>
+						</li>
 					</ol>
 				</li>
 				<li>
