--- a/src/epub/text/ukridge-and-the-old-stepper.xhtml
+++ b/src/epub/text/ukridge-and-the-old-stepper.xhtml
@@ -106,7 +106,7 @@
 			<p>“Of course she’ll like it. She’d damn well better like it. Show me a wholesome, sweet-minded English girl who doesn’t like a sundial and I’ll paste her on the nose,” said the Stepper warmly. “Why, it’s got a motto and everything.”</p>
 			<p>And so it had. We hadn’t spotted it at first, the contrivance having been more or less covered with moss; but the Stepper had worked briskly with a table knife and now you got a good look of it. Some rot, if I recollect rightly, about ye sunne and ye shoures, carved in Old English letters. It seemed to alter the whole aspect of the sundial⁠—lift it, as it were, into a higher and more dignified class; and for the first time I began to get really enthusiastic.</p>
 			<p>“This is the goods, Uncle Percy,” I said. “This is the right stuff. How can I thank you enough?”</p>
-			<p>You can’t,” said the Stepper.</p>
+			<p>“You can’t,” said the Stepper.</p>
 			<p>“I’ll tell you what the procedure here is,” I said. “I’ll take this thing over to the Hall this morning and ask Myrtle and her father to come to tea? They can’t refuse when they’ve been handed a sundial like this.”</p>
 			<p>“Certainly,” said the Stepper. “A very good idea. Ask them here for tea, and I’ll make the house a bower of roses.”</p>
 			<p>“Can you get roses?”</p>
