[Editorial] plain-clothes -> plainclothes

--- a/src/epub/text/buttercup-day.xhtml
+++ b/src/epub/text/buttercup-day.xhtml
@@ -66,7 +66,7 @@
 			<p>“And then?”</p>
 			<p>“Then I asked what it was all about, and she said ‘Buttercup Day.’ ”</p>
 			<p>“Exactly. And that’s all she will need to say to anyone. Is it likely, is it reasonable to suppose, that even in these materialistic days Chivalry has sunk so low that any man will require to be told more, by a girl as pretty as that, than that it is Buttercup Day?” He walked to the window and looked out. “Ah! She’s come round into the back garden,” he said, with satisfaction. “She seems to be doing a roaring trade. Every second man is wearing a buttercup. She is now putting it across a curate, bless her heart.”</p>
-			<p>“And in a couple of minutes she will probably try to put it across a plain-clothes detective, and that will be the end.”</p>
+			<p>“And in a couple of minutes she will probably try to put it across a plainclothes detective, and that will be the end.”</p>
 			<p>Ukridge eyed me reproachfully.</p>
 			<p>“You persist in looking on the gloomy side, Corky. A little more of the congratulatory attitude is what I could wish to see in you, laddie. You do not appear to realize that your old friend’s foot is at last on the ladder that leads to wealth. Suppose⁠—putting it at the lowest figure⁠—I net four pounds out of this buttercup business. It goes on Caterpillar in the two o’clock selling race at Kempton. Caterpillar wins, the odds being⁠—let us say⁠—ten to one. Stake and winnings go on Bismuth for the Jubilee Cup, again at ten to one. There you have a nice, clean four hundred pounds of capital, ample for a man of keen business sense to build a fortune on. For, between ourselves, Corky, I have my eye on what looks like the investment of a lifetime.”</p>
 			<p>“Yes?”</p>
